pieveinota stilizācija administrācijai

--- a/Sistēma/interneta-veikals/src/index.css
+++ b/Sistēma/interneta-veikals/src/index.css
@@ -46,7 +46,13 @@ body {
 
 a {
   text-decoration: none;
-  color: #c8c8c8;
+}
+
+a,
+a:visited,
+a:hover,
+a:active {
+  color: inherit;
 }
 
 /* Make images easier to work with */
